syntax = "proto3";

option csharp_namespace = "Infrastructure.Proto";

package Authentication;

service Authentication {
    rpc GetCurrentPublicKey(GetCurrentPublicKeyRequest) returns (GetCurrentPublicKeyResponse);
    rpc GetPublicKeyByKeyId(GetPublicKeyByKeyIdRequest) returns (GetPublicKeyByKeyIdResponse);
}

// get current public key
message GetCurrentPublicKeyRequest {
}

message GetCurrentPublicKeyResponse {
    string keyId = 1;
    bytes key = 2;
}

// get public key by key id
message GetPublicKeyByKeyIdRequest {
    string keyId = 1;
}

message GetPublicKeyByKeyIdResponse {
    bytes key = 1;
}
